# DoMyTasks

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml
backend/: pyproject.toml
backend/domytasks/: __init__.py  auth.py  config.py  db.py  main.py  models.py  schemas.py
backend/domytasks/api/: deps.py
backend/domytasks/api/routes/: auth.py  settings.py  tasks.py  views.py  workstreams.py
backend/domytasks/mcp/: agent_guide.py  server.py
backend/domytasks/service/: exceptions.py  settings.py  sort.py  tasks.py  views.py  workstreams.py
backend/tests/: conftest.py  test_api.py  test_auth_unit.py  test_mcp.py  test_mcp_agent_guide.py  test_mcp_tools.py  test_sort.py  test_tasks.py  test_views.py  test_workstreams.py
docs/: agents.md  spec-v1.md
extensions/claude-desktop/: .gitignore  .mcpbignore  README.md  manifest.json  package-lock.json  package.json
extensions/claude-desktop/scripts/: prepack.mjs
extensions/claude-desktop/server/: index.js
frontend/: package-lock.json  package.json  vitest.config.ts  vitest.setup.ts
frontend/public/: manifest.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: AppSidebar.tsx  CompleteCircle.tsx  DashboardView.tsx  EmptyState.tsx  KanbanBoard.tsx  LoadingSkeleton.tsx  LogoMark.tsx  PageToolbar.tsx  PriorityBadge.tsx  SearchField.tsx  SidebarItem.tsx  TaskCard.tsx  TaskForm.tsx  ThemeToggle.tsx  TokenGate.tsx  ViewSwitcher.tsx  WorkstreamFilter.tsx  WorkstreamFormModal.tsx  components.test.tsx  icons.tsx
(+9 files in other folders)
